--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.monitoreomayorista.superapp.Main">
 
-    <Button
+    <ImageButton
         android:id="@+id/loginBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -16,7 +16,9 @@
         android:layout_gravity="top|end"
         android:background="@android:color/transparent"
         android:elevation="8dp"
-        android:foreground="@drawable/ic_account_box_black_24dp" />
+        android:padding="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_account_box_black_24dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
